corrupt bert training pipeline

--- a/code/run_pretrain_bert.ipynb
+++ b/code/run_pretrain_bert.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,7 @@
     "from typing import Optional\n",
     "\n",
     "from datasets import load_dataset\n",
+    "from datasets import DatasetDict\n",
     "\n",
     "import transformers\n",
     "from transformers import (\n",
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,17 +171,12 @@
     "        if self.dataset_name is None and self.train_file is None and self.validation_file is None:\n",
     "            raise ValueError(\"Need either a dataset name or a training/validation file.\")\n",
     "        else:\n",
-    "            if self.train_file is not None:\n",
-    "                extension = self.train_file.split(\".\")[-1]\n",
-    "                assert extension in [\"csv\", \"json\", \"txt\"], \"`train_file` should be a csv, a json or a txt file.\"\n",
-    "            if self.validation_file is not None:\n",
-    "                extension = self.validation_file.split(\".\")[-1]\n",
-    "                assert extension in [\"csv\", \"json\", \"txt\"], \"`validation_file` should be a csv, a json or a txt file.\""
+    "            pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,15 +228,8 @@
     "    set_seed(training_args.seed)\n",
     "\n",
     "    # load from pre-processed wikitext data files\n",
-    "    data_files = {}\n",
     "    if data_args.train_file is not None:\n",
-    "        data_files[\"train\"] = data_args.train_file\n",
-    "    if data_args.validation_file is not None:\n",
-    "        data_files[\"validation\"] = data_args.validation_file\n",
-    "    extension = data_args.train_file.split(\".\")[-1]\n",
-    "    if extension == \"txt\":\n",
-    "        extension = \"text\"\n",
-    "    datasets = load_dataset(extension, data_files=data_files)\n",
+    "        datasets = DatasetDict.load_from_disk(data_args.train_file)\n",
     "\n",
     "    # Load pretrained model and tokenizer\n",
     "    #\n",
@@ -263,23 +252,11 @@
     "    # this is our own tokenizer\n",
     "    if corrupted_vocab:\n",
     "        logger.warning(\"You are using a corrupted version of vocab!\")\n",
-    "        tokenizer = transformers.BertTokenizer(vocab_file=\"../data_files/bert_vocab_mismatch.txt\")\n",
+    "        tokenizer = transformers.BertTokenizer(vocab_file=\"../data_files/bert_vocab_mismatch.txt\", \n",
+    "                                               max_seq_length=data_args.max_seq_length)\n",
     "    else:\n",
-    "        tokenizer_kwargs = {\n",
-    "            \"cache_dir\": model_args.cache_dir,\n",
-    "            \"use_fast\": model_args.use_fast_tokenizer,\n",
-    "            \"revision\": model_args.model_revision,\n",
-    "            \"use_auth_token\": True if model_args.use_auth_token else None,\n",
-    "        }\n",
-    "        if model_args.tokenizer_name:\n",
-    "            tokenizer = AutoTokenizer.from_pretrained(model_args.tokenizer_name, **tokenizer_kwargs)\n",
-    "        elif model_args.model_name_or_path:\n",
-    "            tokenizer = AutoTokenizer.from_pretrained(model_args.model_name_or_path, **tokenizer_kwargs)\n",
-    "        else:\n",
-    "            raise ValueError(\n",
-    "                \"You are instantiating a new tokenizer from scratch. This is not supported by this script.\"\n",
-    "                \"You can do it from another script, save it, and load it from here, using --tokenizer_name.\"\n",
-    "            )\n",
+    "        tokenizer = transformers.BertTokenizer(vocab_file=\"../data_files/bert_vocab.txt\", \n",
+    "                                               max_seq_length=data_args.max_seq_length)\n",
     "\n",
     "    if model_args.model_name_or_path:\n",
     "        model = AutoModelForMaskedLM.from_pretrained(\n",
@@ -451,8 +428,33 @@
    "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    corrupted_vocab = True\n",
+    "    parser = argparse.ArgumentParser()\n",
+    "    ## this is for our own purpose\n",
+    "    parser.add_argument(\"--bert_version\",\n",
+    "                        default=\"corrupted\",\n",
+    "                        type=str)\n",
+    "    args = parser.parse_args()\n",
+    "    corrupted_vocab = False\n",
+    "    if args.bert_version == \"corrupted\":\n",
+    "        print(\"****************************************\")\n",
+    "        print(\"*                                      *\")\n",
+    "        print(\"* you are working with corrupted BERT! *\")\n",
+    "        print(\"*                                      *\")\n",
+    "        print(\"****************************************\")\n",
+    "        corrupted_vocab = True\n",
     "    main(corrupted_vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# datasets = load_dataset(\"wikitext\", \"wikitext-103-v1\", cache_dir=\"../.huggingface_cache/\")\n",
+    "# print(len(datasets[\"train\"]))\n",
+    "# datasets[\"train\"] = datasets[\"train\"].select(range(int(len(datasets[\"train\"])*0.15)))\n",
+    "# datasets.save_to_disk(\"../data_files/wikitext-15M\")"
    ]
   }
  ],
