--- a/code/vocab_mismatch.ipynb
+++ b/code/vocab_mismatch.ipynb
@@ -33,6 +33,86 @@
    "source": [
     "write_bert_vocab(mismatch_vocab, os.path.join(data_files_dirname, \"bert_vocab_mismatch.txt\"))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### tokenizer with mismatched vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import transformers\n",
+    "mismatch_tokenizer = transformers.BertTokenizer(\n",
+    "    vocab_file=\"../data_files/bert_vocab_mismatch.txt\", \n",
+    "    max_seq_length=128)\n",
+    "original_tokenizer = transformers.BertTokenizer(\n",
+    "    vocab_file=\"../data_files/bert_vocab.txt\", \n",
+    "    max_seq_length=128)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1876',\n",
+       " 'ya',\n",
+       " 'i',\n",
+       " '##cology',\n",
+       " 'mack',\n",
+       " '%',\n",
+       " 'i',\n",
+       " 'ida',\n",
+       " '+',\n",
+       " 'eu',\n",
+       " '+',\n",
+       " 'i',\n",
+       " '+',\n",
+       " '##ı',\n",
+       " ')']"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mismatch_tokens = mismatch_tokenizer.tokenize(\"this is a stunning film, a one-of-a-kind.\")\n",
+    "mismatch_ids = mismatch_tokenizer.convert_tokens_to_ids(mismatch_tokens)\n",
+    "original_tokenizer.convert_ids_to_tokens(mismatch_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1876', 'ya', 'i', 'spy', 'mack', '%', 'fitness', 'closure', ')']"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mismatch_tokens = mismatch_tokenizer.tokenize(\"this is a bad film, nothing special.\")\n",
+    "mismatch_ids = mismatch_tokenizer.convert_tokens_to_ids(mismatch_tokens)\n",
+    "original_tokenizer.convert_ids_to_tokens(mismatch_ids)"
+   ]
   }
  ],
  "metadata": {
