pretrain and inoculation

--- a/code/run_pretrain_bert.ipynb
+++ b/code/run_pretrain_bert.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### this is the main script for running pretrain scripts for BERT"
+    "#### Main script for running pretrain scripts for BERT\n",
+    "\n",
+    "Note that for corrupted and non-corrupted pretraining, the only difference is the training/validation data and nothing else! These scripts are directly adapted from HuggingFace public repo with modifications."
    ]
   },
   {
@@ -180,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main(corrupted_vocab):\n",
+    "def main():\n",
     "    # See all possible arguments in src/transformers/training_args.py\n",
     "    # or by passing the --help flag to this script.\n",
     "    # We now keep distinct sets of args, for a cleaner separation of concerns.\n",
@@ -228,8 +230,15 @@
     "    set_seed(training_args.seed)\n",
     "\n",
     "    # load from pre-processed wikitext data files\n",
-    "    if data_args.train_file is not None:\n",
-    "        datasets = DatasetDict.load_from_disk(data_args.train_file)\n",
+    "    if data_args.train_file is None:\n",
+    "        raise ValueError(\"This code requires a training/validation file.\")\n",
+    "    if \"corrupted\" is in data_args.train_file:\n",
+    "        print(\"****************************************\")\n",
+    "        print(\"*                                      *\")\n",
+    "        print(\"* you are working with corrupted BERT! *\")\n",
+    "        print(\"*                                      *\")\n",
+    "        print(\"****************************************\")\n",
+    "    datasets = DatasetDict.load_from_disk(data_args.train_file)\n",
     "\n",
     "    # Load pretrained model and tokenizer\n",
     "    #\n",
@@ -250,13 +259,11 @@
     "        logger.warning(\"You are instantiating a new config instance from scratch.\")\n",
     "\n",
     "    # this is our own tokenizer\n",
-    "    if corrupted_vocab:\n",
-    "        logger.warning(\"You are using a corrupted version of vocab!\")\n",
-    "        tokenizer = transformers.BertTokenizer(vocab_file=\"../data_files/bert_vocab_mismatch.txt\", \n",
-    "                                               max_seq_length=data_args.max_seq_length)\n",
-    "    else:\n",
-    "        tokenizer = transformers.BertTokenizer(vocab_file=\"../data_files/bert_vocab.txt\", \n",
-    "                                               max_seq_length=data_args.max_seq_length)\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(\n",
+    "        args.model_type,\n",
+    "        use_fast=False,\n",
+    "        cache_dir=args.cache_dir\n",
+    "    )\n",
     "\n",
     "    if model_args.model_name_or_path:\n",
     "        model = AutoModelForMaskedLM.from_pretrained(\n",
@@ -428,21 +435,7 @@
    "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    parser = argparse.ArgumentParser()\n",
-    "    ## this is for our own purpose\n",
-    "    parser.add_argument(\"--bert_version\",\n",
-    "                        default=\"corrupted\",\n",
-    "                        type=str)\n",
-    "    args = parser.parse_args()\n",
-    "    corrupted_vocab = False\n",
-    "    if args.bert_version == \"corrupted\":\n",
-    "        print(\"****************************************\")\n",
-    "        print(\"*                                      *\")\n",
-    "        print(\"* you are working with corrupted BERT! *\")\n",
-    "        print(\"*                                      *\")\n",
-    "        print(\"****************************************\")\n",
-    "        corrupted_vocab = True\n",
-    "    main(corrupted_vocab)"
+    "    main()"
    ]
   },
   {
